--- a/src/app/admin-alunos/admin-alunos.component.scss
+++ b/src/app/admin-alunos/admin-alunos.component.scss
@@ -1,7 +1,9 @@
 div {
-    text-align: center;
+    text-align: left;
+    width: 300px;
 }
 
 .my-form {
-    margin-top: 20%;
+    margin-top: 50%;
+    margin-left: 100%;
 }
