--- a/src/app/admin-funcionarios/admin-funcionarios.component.html
+++ b/src/app/admin-funcionarios/admin-funcionarios.component.html
@@ -1,45 +1,27 @@
-<form [formGroup]="myForm" class="my-form">
-    <div class="form-group">
-      <label for="nome">Nome</label>
-      <input type="text" class="form-control" name="nome" id="nome" required>
-    </div>
-  
-    <div class="form-group">
-      <label for="tipo">Tipo</label>
-      <select class="form-control" name="tipo" id="tipo">
-        <option value="1">Pessoa física</option>
-        <option value="2">Pessoa jurídica</option>
-      </select>
-    </div>
-  
-    <div class="form-group">
-      <label>Gênero</label>
-  
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="genero" id="masculino" [value]="1">
-        <label class="form-check-label" for="masculino">Masculino</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="genero" id="feminino" [value]="2">
-        <label class="form-check-label" for="feminino">Feminino</label>
-      </div>
-    </div>
-  
-    <div class="form-group">
-      <label for="dataNascimento">Data de nascimento</label>
-      <input type="date" class="form-control" name="dataNascimento" id="dataNascimento">
-    </div>
-  
-    <div class="form-group">
-      <label for="observacao">Observação</label>
-      <textarea class="form-control" rows="3" name="observacao" id="observacao"></textarea>
-    </div>
-  
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" name="inativo" id="inativo">
-      <label class="form-check-label" for="inativo">Inativo</label>
-    </div>
-  
-    <input type="submit" class="btn btn-primary mt-4" value="Salvar">
-    <a href="#" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
-</form>
+<div>
+    <form [formGroup]="formEmployee" class="my-form">
+        <div class="form-group">
+            <label for="nome">Nome</label>
+            <input type="text" class="form-control" formControlName='name' [(ngModel)]="employee.name">
+        </div>
+    
+        <div class="form-group">
+            <label for="CPF">CPF</label>
+            <input type="number" class="form-control" formControlName='cpf' [(ngModel)]="employee.cpf">
+        </div>
+    
+        <div class="form-group">
+            <label for="nome">Senha</label>
+            <input type="password" class="form-control" formControlName='password' [(ngModel)]="employee.password">
+        </div>
+    
+        <!-- <div class="form-group">
+            <label for="nome">Confirmar Senha</label>
+            <input type="password" class="form-control" formControlName='confirmPassword'>
+        </div> -->
+        <div>
+            <input type="submit" class="btn btn-primary mt-4" value="Salvar" (click)="createEmployee()">
+        </div>
+    </form>
+
+</div>
