--- a/src/app/turmas/turmas.component.html
+++ b/src/app/turmas/turmas.component.html
@@ -1,1 +1,50 @@
-<p>turmas works!</p>
+<div>
+    <h2>Turmas</h2>
+
+    <div fxLayout fxLayoutAlign="center center">
+        <mat-form-field fxFlex="40%">
+          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Aluno">
+        </mat-form-field>
+    </div>
+    
+    <div class="mat-elevation-z8 data-table">
+        <table mat-table matSort class="table" [dataSource]="dataSource">
+            <ng-container matColumnDef="N°">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
+                <td mat-cell *matCellDef="let student"> {{student.seqNo}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+                <td mat-cell *matCellDef="let student"> {{student.name}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="cpf">
+                <th mat-header-cell *matHeaderCellDef> CPF </th>
+                <td mat-cell *matCellDef="let student"> {{student.cpf}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="registrationDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Matrícula </th>
+                <td mat-cell *matCellDef="let student"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="update">
+                <th class="w-25" mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
+                <td mat-cell *matCellDef="let element">
+                   <button mat-icon-button>
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+    
+    </div>
+</div>
+
+
