--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<!-- <div class="navbar">
     <a href="#">
         <img src="././assets/logo.svg" class="logo">
     </a>
@@ -46,6 +46,18 @@
         <a routerLink="/admin-franquias">Franquias</a>
         <a routerLink="/admin-funcionarios">Funcionários</a>
       </div>
-  </div>
+  </div> -->
+
+  <!-- <mat-sidenav-container class="example-container">
+    <mat-sidenav mode = "side" opened>            
+       <mat-toolbar color="accent">
+          <span> Shop Smart </span>
+       </mat-toolbar>
+    </mat-sidenav>
+    <mat-sidenav-content>
+       <mat-toolbar color="warn"> Main Toolbar </mat-toolbar>
+          <app-container></app-container>
+       </mat-sidenav-content>
+ </mat-sidenav-container> -->
 
   <router-outlet></router-outlet>
