--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -24,3 +24,11 @@
     max-width: 80%;
     max-height: 80%;
 }
+
+a:focus{
+    background:#FFD700 !important;
+}
+
+a {
+    background-color:white;
+}
