--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -2,9 +2,7 @@
     <img src="././assets/logo.svg" class="logo">
     <span style="flex: 1 1 auto;"></span>
     <div>
-        <button mat-icon-button matTooltip="Notifications">
-            <mat-icon>notifications</mat-icon>
-        </button>
+        <mat-card-title>Leonardo Albuquerque</mat-card-title>
         <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="accountMenu">
             <mat-icon>account_circle</mat-icon>
         </button>
@@ -23,7 +21,7 @@
 <mat-sidenav-container style="height: calc(100% - 64px); margin: 0;">
     <mat-sidenav #sidenav mode="side" opened [disableClose]="true"[class.mat-elevation-z4]="true" style="width: 240px">
         <mat-nav-list dense>
-            <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
+            <mat-expansion-panel [class.mat-elevation-z0]="true" >
                 <mat-expansion-panel-header>
                     Módulo Prático
                 </mat-expansion-panel-header>
@@ -33,15 +31,50 @@
                     <a mat-list-item routerLink="#"><mat-icon>attach_money</mat-icon>Multas - Práticas</a>
                 </mat-nav-list>
             </mat-expansion-panel>
+
             <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
                 <mat-expansion-panel-header>
-                    Privacy
+                    Módulo Teórico
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="#"><mat-icon>person_add</mat-icon>Partnership Request</a>
-                    <a mat-list-item routerLink="#"><mat-icon>visibility</mat-icon>Profile Visibility</a>
+                    <a mat-list-item routerLink="#"><mat-icon>table-chart</mat-icon>Tabela Teórica</a>
+                    <a mat-list-item routerLink="#"><mat-icon>attach_money</mat-icon>Multas - Teóricas</a>
                 </mat-nav-list>
             </mat-expansion-panel>
+
+            <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
+                <mat-expansion-panel-header>
+                    Módulo Instrutor
+                </mat-expansion-panel-header>
+                <mat-nav-list dense>
+                    <a mat-list-item routerLink="#"><mat-icon>person</mat-icon>Instrutor Prático</a>
+                    <a mat-list-item routerLink="#"><mat-icon>person</mat-icon>Instrutor Teórico</a>
+                </mat-nav-list>
+            </mat-expansion-panel>
+
+            <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
+                <mat-expansion-panel-header>
+                    Turmas
+                </mat-expansion-panel-header>
+                <mat-nav-list dense>
+                    <a mat-list-item routerLink="/turmas" ><mat-icon>people</mat-icon>Turma 1</a>
+                    <a mat-list-item routerLink="/turmas"><mat-icon>people</mat-icon>Turma 2</a>
+                </mat-nav-list>
+            </mat-expansion-panel>
+
+            <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
+                <mat-expansion-panel-header>
+                    Administração
+                </mat-expansion-panel-header>
+                <mat-nav-list dense>
+                    <a mat-list-item routerLink="/admin-alunos">Alunos</a>
+                    <a mat-list-item routerLink="/admin-instrutor">Instrutor</a>
+                    <a mat-list-item routerLink="/admin-franquias">Funcionários</a>
+                    <a mat-list-item routerLink="/admin-funcionarios">Franquias</a>
+                    <a mat-list-item routerLink="#">Turmas</a>
+                </mat-nav-list>
+            </mat-expansion-panel>
+
         </mat-nav-list>
     </mat-sidenav>
     <router-outlet></router-outlet>
