--- a/src/app/admin-alunos/admin-alunos.component.scss
+++ b/src/app/admin-alunos/admin-alunos.component.scss
@@ -1,9 +1,73 @@
-div {
-    text-align: left;
-    width: 300px;
+// .my-form {
+//     margin-top: 50%;
+//     margin-left: 100%;
+// }
+
+
+// .box {
+//     margin-left: 10%;
+//     padding-left: 20%;
+//     padding-top: 7%;
+//     width: 520px;
+//     margin: 0;
+// }
+
+// mat-card {
+//     padding: 1rem 1.25rem;
+//     background-color: #fff;
+//     border-bottom: 1px solid #eee;
+// }
+
+.card-header {
+    box-shadow: 2px 2px 2px rgba(0,0,0,.05);
 }
 
-.my-form {
-    margin-top: 50%;
-    margin-left: 100%;
+.card {
+    background-color: #fff;
+    border: 0 solid #eee;
+    border-radius: 0;
+    width: 800px;
+    line-height: 1.5;
+    display: flex;
+    padding-left: 20px;
+    margin-left: 10%;
+    margin-top: 5%;
+}
+.card {
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.1), -1px 0 2px rgba(0,0,0,.05);
+}
+.card {
+    position: relative;
+    display: grid;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.content{
+    position: relative;
+}
+
+.col-lg-12 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.col-float {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    float: left;
+}
+
+.mat-raised-button {
+    background-color: #FFD700;
+    color: #000;
 }
