--- a/src/app/admin-funcionarios/admin-funcionarios.component.scss
+++ b/src/app/admin-funcionarios/admin-funcionarios.component.scss
@@ -1,9 +1,34 @@
-div {
-    text-align: left;
-    width: 300px;
+.card-header {
+    box-shadow: 2px 2px 2px rgba(0,0,0,.05);
 }
 
-.my-form {
-    margin-top: 50%;
-    margin-left: 100%;
+.card {
+    background-color: #fff;
+    border: 0 solid #eee;
+    border-radius: 0;
+    width: 800px;
+    line-height: 1.5;
+    display: flex;
+    padding-left: 20px;
+    margin-left: 10%;
+    margin-top: 5%;
+}
+.card {
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.1), -1px 0 2px rgba(0,0,0,.05);
+}
+.card {
+    position: relative;
+    display: grid;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.mat-raised-button {
+    background-color: #FFD700;
+    color: #000;
 }
