--- a/src/app/admin-instrutor/admin-instrutor.component.html
+++ b/src/app/admin-instrutor/admin-instrutor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="myForm" class="my-form">
+<!-- <form [formGroup]="myForm" class="my-form">
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" class="form-control" name="nome" id="nome" required>
@@ -22,4 +22,46 @@
 
     </div>
 
-</form>
+</form> -->
+
+<div class="card">
+    <mat-card class='card-header'><h4>Administração de Instrutores</h4></mat-card>
+
+    <form [formGroup]="formInstructor" class="my-form">
+        <mat-form-field appearance="outline">
+            <mat-label>Nome</mat-label>
+            <input matInput formControlName="name" required>
+            <mat-error *ngIf="formInstructor.invalid">{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>CPF</mat-label>
+            <input matInput formControlName="cpf" required>
+            <mat-error *ngIf="formInstructor.invalid">{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="col-lg-12">
+            <mat-label>Tipo</mat-label>
+            <mat-select formControlName="type">
+                <mat-option value="one">Prático</mat-option>
+                <mat-option value="two">Teórico</mat-option>
+                <mat-option value="three">Ambos</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formInstructor.invalid">{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="col-lg-12">
+            <mat-label>Cidade</mat-label>
+            <mat-select formControlName="city">
+                <mat-option value="one">Viçosa</mat-option>
+                <mat-option value="two">Maribondo</mat-option>
+                <mat-option value="three">Atalaia</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formInstructor.invalid">{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+
+        <div class="form-element">
+            <button mat-raised-button color="primary" type="submit" class="button" [disabled]="disabledButton()">Salvar</button>
+          </div>
+    </form>
+</div>
