--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -2,11 +2,14 @@
     <img src="././assets/logo.svg" class="logo">
     <span style="flex: 1 1 auto;"></span>
     <div>
-        <mat-card-title>Leonardo Albuquerque</mat-card-title>
-        <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="accountMenu">
-            <mat-icon>account_circle</mat-icon>
+        <mat-card-title class="logout">Sair</mat-card-title>
+        <button mat-icon-button>
+            <mat-icon>exit_to_app</mat-icon>
         </button>
-        <mat-menu #accountMenu [overlapTrigger]="false" yPosition="below">
+        <!-- <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="accountMenu">
+            <mat-icon>exit_to_app</mat-icon>
+        </button> -->
+        <!-- <mat-menu #accountMenu [overlapTrigger]="false" yPosition="below">
             <button mat-menu-item routerLink="#">
                 <mat-icon>person</mat-icon><span>Minha Conta</span>
             </button>
@@ -14,21 +17,28 @@
             <button mat-menu-item>
                 <mat-icon>exit_to_app</mat-icon>Sair
             </button>
-        </mat-menu>
+        </mat-menu> -->
     </div>
 </mat-toolbar>
 
 <mat-sidenav-container style="height: calc(100% - 64px); margin: 0;">
-    <mat-sidenav #sidenav mode="side" opened [disableClose]="true"[class.mat-elevation-z4]="true" style="width: 240px">
+    <mat-sidenav #sidenav mode="side" opened [disableClose]="true" [class.mat-elevation-z4]="true" style="width: 240px">
+        <span class="h4">Leonardo Albuquerque</span>
         <mat-nav-list dense>
-            <mat-expansion-panel [class.mat-elevation-z0]="true" >
+            <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>
                     Módulo Prático
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="#"><mat-icon>people</mat-icon>Alunos</a>
-                    <a mat-list-item routerLink="#"><mat-icon>table-chart</mat-icon>Tabela Prática</a>
-                    <a mat-list-item routerLink="#"><mat-icon>attach_money</mat-icon>Multas - Práticas</a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>people</mat-icon>Alunos
+                    </a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>table-chart</mat-icon>Tabela Prática
+                    </a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>attach_money</mat-icon>Multas - Práticas
+                    </a>
                 </mat-nav-list>
             </mat-expansion-panel>
 
@@ -37,8 +47,12 @@
                     Módulo Teórico
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="#"><mat-icon>table-chart</mat-icon>Tabela Teórica</a>
-                    <a mat-list-item routerLink="#"><mat-icon>attach_money</mat-icon>Multas - Teóricas</a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>table-chart</mat-icon>Tabela Teórica
+                    </a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>attach_money</mat-icon>Multas - Teóricas
+                    </a>
                 </mat-nav-list>
             </mat-expansion-panel>
 
@@ -47,8 +61,12 @@
                     Módulo Instrutor
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="#"><mat-icon>person</mat-icon>Instrutor Prático</a>
-                    <a mat-list-item routerLink="#"><mat-icon>person</mat-icon>Instrutor Teórico</a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>person</mat-icon>Instrutor Prático
+                    </a>
+                    <a mat-list-item routerLink="#">
+                        <mat-icon>person</mat-icon>Instrutor Teórico
+                    </a>
                 </mat-nav-list>
             </mat-expansion-panel>
 
@@ -57,8 +75,12 @@
                     Turmas
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="/turmas" ><mat-icon>people</mat-icon>Turma 1</a>
-                    <a mat-list-item routerLink="/turmas"><mat-icon>people</mat-icon>Turma 2</a>
+                    <a mat-list-item routerLink="/turmas">
+                        <mat-icon>people</mat-icon>Turma 1
+                    </a>
+                    <a mat-list-item routerLink="/turmas">
+                        <mat-icon>people</mat-icon>Turma 2
+                    </a>
                 </mat-nav-list>
             </mat-expansion-panel>
 
@@ -69,8 +91,8 @@
                 <mat-nav-list dense>
                     <a mat-list-item routerLink="/admin-alunos">Alunos</a>
                     <a mat-list-item routerLink="/admin-instrutor">Instrutor</a>
-                    <a mat-list-item routerLink="/admin-franquias">Funcionários</a>
-                    <a mat-list-item routerLink="/admin-funcionarios">Franquias</a>
+                    <a mat-list-item routerLink="/admin-funcionarios">Funcionários</a>
+                    <a mat-list-item routerLink="/admin-franquias">Franquias</a>
                     <a mat-list-item routerLink="#">Turmas</a>
                 </mat-nav-list>
             </mat-expansion-panel>
@@ -78,5 +100,5 @@
         </mat-nav-list>
     </mat-sidenav>
     <router-outlet></router-outlet>
-</mat-sidenav-container>
 
+</mat-sidenav-container>
