--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -32,3 +32,28 @@ a:focus{
 a {
     background-color:white;
 }
+
+mat-expansion-panel-header:hover {
+    transition: 0.5s;
+    opacity: 0.7;
+    background-color: #FFD700;
+}
+
+.h4 {
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 700;
+    line-height: 1.1;
+    color: inherit;
+    text-align: left!important;
+    white-space: normal!important;
+    width: 100%!important;
+
+    margin-top: 50px;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.logout {
+    font-size: 17px;
+}
