--- a/src/app/admin-funcionarios/admin-funcionarios.component.scss
+++ b/src/app/admin-funcionarios/admin-funcionarios.component.scss
@@ -31,4 +31,15 @@
 .mat-raised-button {
     background-color: #FFD700;
     color: #000;
+    margin-left: 10%;
+}
+
+.col-lg-5 {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.content{
+    padding-top: 20px;
+    position: relative;
 }
