--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -47,7 +47,7 @@
                     Módulo Teórico
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="#">
+                    <a mat-list-item routerLink="/alunos-teoricos">
                         <mat-icon>table-chart</mat-icon>Tabela Teórica
                     </a>
                     <a mat-list-item routerLink="#">
@@ -93,7 +93,7 @@
                     <a mat-list-item routerLink="/admin-instrutor">Instrutor</a>
                     <a mat-list-item routerLink="/admin-funcionarios">Funcionários</a>
                     <a mat-list-item routerLink="/admin-franquias">Franquias</a>
-                    <a mat-list-item routerLink="#">Turmas</a>
+                    <a mat-list-item routerLink="/admin-classes">Turmas</a>
                 </mat-nav-list>
             </mat-expansion-panel>
 
