--- a/src/app/admin-alunos/admin-alunos.component.scss
+++ b/src/app/admin-alunos/admin-alunos.component.scss
@@ -1,22 +1,3 @@
-// .my-form {
-//     margin-top: 50%;
-//     margin-left: 100%;
-// }
-
-
-// .box {
-//     margin-left: 10%;
-//     padding-left: 20%;
-//     padding-top: 7%;
-//     width: 520px;
-//     margin: 0;
-// }
-
-// mat-card {
-//     padding: 1rem 1.25rem;
-//     background-color: #fff;
-//     border-bottom: 1px solid #eee;
-// }
 
 .card-header {
     box-shadow: 2px 2px 2px rgba(0,0,0,.05);
@@ -49,25 +30,27 @@
 }
 
 .content{
+    padding-top: 20px;
     position: relative;
 }
 
-.col-lg-12 {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+.col-lg-5 {
+    // display: flex;
+    // flex-wrap: wrap;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
-.col-float {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-    float: left;
-}
+// .col-float {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-right: -15px;
+//     margin-left: -15px;
+//     float: left;
+// }
 
 .mat-raised-button {
     background-color: #FFD700;
     color: #000;
+    margin-left: 10%;
 }
