--- a/src/app/admin-classes/admin-classes.component.html
+++ b/src/app/admin-classes/admin-classes.component.html
@@ -3,7 +3,7 @@
 
     <div fxLayout fxLayoutAlign="center center">
         <mat-form-field fxFlex="40%">
-          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Aluno">
+          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Turma">
         </mat-form-field>
     </div>
     
@@ -11,27 +11,26 @@
         <table mat-table matSort class="table" [dataSource]="dataSource">
             <ng-container matColumnDef="N°">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
-                <td mat-cell *matCellDef="let student"> {{student.seqNo}} </td>
+                <td mat-cell *matCellDef="let student"> {{classes.seqNo}} </td>
             </ng-container>
         
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-                <td mat-cell *matCellDef="let student"> {{student.name}} 
-                </td>
+                <td mat-cell *matCellDef="let student"> {{classes.name}} </td>
             </ng-container>
         
-            <ng-container matColumnDef="cpf">
-                <th mat-header-cell *matHeaderCellDef> CPF </th>
-                <td mat-cell *matCellDef="let student"> {{student.cpf}} </td>
+            <ng-container matColumnDef="shift">
+                <th mat-header-cell *matHeaderCellDef> Turno </th>
+                <td mat-cell *matCellDef="let cls"> {{classes.shift}} </td>
             </ng-container>
-        
-            <ng-container matColumnDef="registrationDate">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Matrícula </th>
-                <td mat-cell *matCellDef="let student"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
+
+            <ng-container matColumnDef="size">
+                <th mat-header-cell *matHeaderCellDef> Quantidade de Alunos </th>
+                <td mat-cell *matCellDef="let cls"> {{classes.size}} </td>
             </ng-container>
         
             <ng-container matColumnDef="update">
-                <th class="w-25" mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
+                <th mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
                 <td mat-cell *matCellDef="let element">
                    <button mat-icon-button>
                     <mat-icon>edit</mat-icon>
@@ -43,8 +42,12 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
     
+    </div>
+
+    <div class="form-element">
+        <button mat-raised-button color="primary" type="submit" class="button" (click)="createClass()">Nova Turma</button>
     </div>
 </div>
 
