--- a/src/app/admin-classes/admin-classes.component.scss
+++ b/src/app/admin-classes/admin-classes.component.scss
@@ -13,24 +13,17 @@ h2 {
 }
 
 .data-table {
-    width: 70%;
+    width: 40%;
     margin-left: 15%;
-}
-
-button {
-    background-color: transparent;
-    box-shadow: none;
 }
 
 .w-25 {
     width: 25px;
 }
 
-.mat-cell{
-    font-size:14px;
-    font-family: Verdana,Sans-Serif;
-}
-
-.centralize {
-    text-align: center;
+.mat-raised-button {
+    background-color: #FFD700;
+    color: #000;
+    margin-left: 15%;
+    margin-top: 2%;
 }
