--- a/src/app/admin-funcionarios/admin-funcionarios.component.html
+++ b/src/app/admin-funcionarios/admin-funcionarios.component.html
@@ -1,57 +1,35 @@
-<!-- <div>
-    <form [formGroup]="formEmployee" class="my-form">
-        <div class="form-group">
-            <label for="nome">Nome</label>
-            <input type="text" class="form-control" formControlName='name' [(ngModel)]="employee.name">
-        </div>
-    
-        <div class="form-group">
-            <label for="CPF">CPF</label>
-            <input type="number" class="form-control" formControlName='cpf' [(ngModel)]="employee.cpf">
-        </div>
-    
-        <div class="form-group">
-            <label for="nome">Senha</label>
-            <input type="password" class="form-control" formControlName='password' [(ngModel)]="employee.password">
-        </div>
-    
-        <div class="form-group">
-            <label for="nome">Confirmar Senha</label>
-            <input type="password" class="form-control" formControlName='confirmPassword'>
-        </div>
-        <div>
-            <input type="submit" class="btn btn-primary mt-4" value="Salvar" (click)="createEmployee()">
-        </div>
-    </form>
-
-</div> -->
-
 <div class="card">
-    <mat-card class='card-header' ><h4>Administração de Funcionários</h4></mat-card>
+    <mat-card class='card-header'>
+        <h4>Administração de Funcionários</h4>
+    </mat-card>
+    
+    <div class="content">
+        <form [formGroup]="formEmployee" class="my-form">
+            <mat-form-field appearance="legacy" class="col-lg-5">
+                <mat-label>Nome</mat-label>
+                <input matInput formControlName="name" required>
+                <mat-error *ngIf="formEmployee.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+    
+            <mat-form-field appearance="legacy" class="col-lg-5">
+                <mat-label>CPF</mat-label>
+                <input matInput formControlName="cpf" required>
+                <mat-error *ngIf="formEmployee.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+    
+            <mat-form-field appearance="legacy" class="col-lg-5">
+                <mat-label>Senha</mat-label>
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="hide">
+                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+            </mat-form-field>
+        </form>
+    </div>
+   
+</div>
 
-    <form [formGroup]="formEmployee" class="my-form">
-        <mat-form-field appearance="outline">
-            <mat-label>Nome</mat-label>
-            <input matInput formControlName="name" required>
-            <mat-error *ngIf="formEmployee.invalid">{{getErrorMessage()}}</mat-error>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label>CPF</mat-label>
-            <input matInput formControlName="cpf" required>
-            <mat-error *ngIf="formEmployee.invalid">{{getErrorMessage()}}</mat-error>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label>Informe sua senha</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-        </mat-form-field>
-
-        <div class="form-element">
-            <button mat-raised-button color="primary" type="submit" class="button" [disabled]="disabledButton()">Salvar</button>
-          </div>
-    </form>
+<div class="form-element">
+    <button mat-raised-button color="primary" type="submit" class="button" [disabled]="disabledButton()">Salvar</button>
 </div>
