--- a/src/app/alunos-teoricos/alunos-teoricos.component.html
+++ b/src/app/alunos-teoricos/alunos-teoricos.component.html
@@ -1,1 +1,72 @@
-<p>alunos-teoricos works!</p>
+<div>
+    <h2>Alunos Teóricos</h2>
+
+    <div fxLayout fxLayoutAlign="center center">
+        <mat-form-field fxFlex="40%">
+            <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Aluno">
+        </mat-form-field>
+    </div>
+
+    <div class="mat-elevation-z8 data-table">
+        <table mat-table matSort class="table" [dataSource]="dataSource">
+            <ng-container matColumnDef="N°">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
+                <td mat-cell *matCellDef="let student"> {{student.seqNo}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+                <td mat-cell *matCellDef="let student"> {{student.name}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="cpf">
+                <th mat-header-cell *matHeaderCellDef> CPF </th>
+                <td mat-cell *matCellDef="let student"> {{student.cpf}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="registrationDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Matrícula </th>
+                <td mat-cell *matCellDef="let student"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mat1">
+                <th mat-header-cell *matHeaderCellDef> Direção Defensiva </th>
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 0)" class="centralize"> {{student.subjects[0]}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mat2">
+                <th mat-header-cell *matHeaderCellDef> Legislação </th>
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 1)" class="centralize"> {{student.subjects[1]}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mat3">
+                <th mat-header-cell *matHeaderCellDef> Mecânica </th>
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 2)" class="centralize"> {{student.subjects[2]}}
+                </td>
+
+            </ng-container>
+
+            <ng-container matColumnDef="mat4">
+                <th mat-header-cell *matHeaderCellDef> Meio Ambiente </th>
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 3)" class="centralize"> {{student.subjects[3]}}
+
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mat5">
+                <th mat-header-cell *matHeaderCellDef> Primeiros Socorros </th>
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 4)" class="centralize"> {{student.subjects[4]}}
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+
+    </div>
+</div>
