--- a/src/app/alunos-teoricos/alunos-teoricos.component.scss
+++ b/src/app/alunos-teoricos/alunos-teoricos.component.scss
@@ -34,3 +34,14 @@ button {
 .centralize {
     text-align: center;
 }
+
+.mat-raised-button {
+  background-color: #FFD700;
+  color: #000;
+  margin-left: 15%;
+  margin-top: 3%;
+}
+
+.gray-element{
+  color: gray;
+}
