--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -31,13 +31,13 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
                     <a mat-list-item routerLink="#">
-                        <mat-icon>people</mat-icon>Alunos
+                        Alunos
                     </a>
                     <a mat-list-item routerLink="#">
-                        <mat-icon>table-chart</mat-icon>Tabela Prática
+                        Tabela Prática
                     </a>
                     <a mat-list-item routerLink="#">
-                        <mat-icon>attach_money</mat-icon>Multas - Práticas
+                        Multas - Práticas
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
@@ -48,10 +48,10 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
                     <a mat-list-item routerLink="/alunos-teoricos">
-                        <mat-icon>table-chart</mat-icon>Tabela Teórica
+                        Tabela Teórica
                     </a>
                     <a mat-list-item routerLink="#">
-                        <mat-icon>attach_money</mat-icon>Multas - Teóricas
+                        Multas - Teóricas
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
@@ -62,10 +62,10 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
                     <a mat-list-item routerLink="#">
-                        <mat-icon>person</mat-icon>Instrutor Prático
+                        Instrutor Prático
                     </a>
                     <a mat-list-item routerLink="#">
-                        <mat-icon>person</mat-icon>Instrutor Teórico
+                        Instrutor Teórico
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
@@ -76,10 +76,10 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
                     <a mat-list-item routerLink="/turmas">
-                        <mat-icon>people</mat-icon>Turma 1
+                        Turma 1
                     </a>
                     <a mat-list-item routerLink="/turmas">
-                        <mat-icon>people</mat-icon>Turma 2
+                        Turma 2
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
