--- a/src/app/admin-alunos/admin-alunos.component.html
+++ b/src/app/admin-alunos/admin-alunos.component.html
@@ -28,10 +28,30 @@
 
             <mat-form-field appearance="legacy" class="col-lg-5">
                 <mat-label>Sexo</mat-label>
-                <mat-select formControlName="gender">
-                    <mat-option value="one">Masculino</mat-option>
-                    <mat-option value="two">Feminino</mat-option>
+                <mat-select formControlName="gender" required>
+                    <mat-option value="1">Masculino</mat-option>
+                    <mat-option value="0">Feminino</mat-option>
                 </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy" class="col-lg-5">
+              <mat-label>Email</mat-label>
+              <input matInput formControlName="email" required>
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy" class="col-lg-5">
+              <mat-label>Telefone</mat-label>
+              <input matInput formControlName="phone" required>
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy" class="col-lg-5">
+              <mat-label>Aulas Práticas</mat-label>
+              <input matInput formControlName="practicalFines">
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy" class="col-lg-5">
+              <mat-label>Aulas Teóricas</mat-label>
+              <input matInput formControlName="theoreticalFines">
             </mat-form-field>
 
             <mat-form-field appearance="legacy" class="col-lg-5">
@@ -41,36 +61,37 @@
 
             <mat-form-field appearance="legacy" class="col-lg-5">
                 <mat-label>Aulas Noturnas</mat-label>
-                <input matInput formControlName="nigthClasses">
+                <input matInput formControlName="nightClasses">
             </mat-form-field>
 
             <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Matéria 1</mat-label>
-                <input matInput formControlName="subject1">
+                <mat-label>Direção Defensiva</mat-label>
+                <input matInput formControlName="defensiveDriving">
             </mat-form-field>
 
             <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Matéria 2</mat-label>
-                <input matInput formControlName="subject2">
+                <mat-label>Legislação</mat-label>
+                <input matInput formControlName="legislation">
             </mat-form-field>
 
             <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Matéria 3</mat-label>
-                <input matInput formControlName="subject3">
+                <mat-label>Mecânica</mat-label>
+                <input matInput formControlName="mechanics">
             </mat-form-field>
 
             <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Matéria 4</mat-label>
-                <input matInput formControlName="subject4">
+                <mat-label>Meio Ambiente</mat-label>
+                <input matInput formControlName="environment">
             </mat-form-field>
 
             <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Matéria 5</mat-label>
-                <input matInput formControlName="subject5">
+                <mat-label>Primeiros Socorros</mat-label>
+                <input matInput formControlName="firstAid">
             </mat-form-field>
+          <button mat-raised-button color="primary" type="submit" class="button">Salvar</button>
 
-            <button mat-raised-button color="primary" type="submit" class="button">Salvar</button>
         </form>
     </div>
 </div>
+
 
