--- a/src/app/admin-franquias/admin-franquias.component.html
+++ b/src/app/admin-franquias/admin-franquias.component.html
@@ -1,1 +1,35 @@
-<p>admin-franquias works!</p>
+<div>
+    <h2>Franquias</h2>
+    <div class="mat-elevation-z8 data-table">
+        <table mat-table matSort class="table" [dataSource]="dataSource">
+            <ng-container matColumnDef="Id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+                <td mat-cell *matCellDef="let school"> {{school.id}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+                <td mat-cell *matCellDef="let school"> {{school.name}}
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <ng-container matColumnDef="update">
+                <th class="w-25" mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
+                <td mat-cell *matCellDef="let school">
+                   <button mat-icon-button>
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                </td>
+            </ng-container>
+        </table>
+
+    </div>
+</div>
+
+
+<div class="form-element">
+    <button mat-raised-button color="primary" type="submit" class="button" (click)="openDialog()">Nova Franquia</button>
+</div>
