--- a/src/app/alunos-teoricos/alunos-teoricos.component.html
+++ b/src/app/alunos-teoricos/alunos-teoricos.component.html
@@ -11,62 +11,84 @@
         <table mat-table matSort class="table" [dataSource]="dataSource">
             <ng-container matColumnDef="N°">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
-                <td mat-cell *matCellDef="let student"> {{student.seqNo}} </td>
+                <td mat-cell *matCellDef="let student" class="gray-element"> {{student.seqNo}} </td>
             </ng-container>
 
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-                <td mat-cell *matCellDef="let student"> {{student.name}}
+                <td mat-cell *matCellDef="let student" class="gray-element"> {{student.name}}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="cpf">
                 <th mat-header-cell *matHeaderCellDef> CPF </th>
-                <td mat-cell *matCellDef="let student"> {{student.cpf}} </td>
+                <td mat-cell *matCellDef="let student" class="gray-element"> {{student.cpf}} </td>
             </ng-container>
 
             <ng-container matColumnDef="registrationDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Matrícula </th>
-                <td mat-cell *matCellDef="let student"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
+                <td mat-cell *matCellDef="let student" class="gray-element"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="mat1">
                 <th mat-header-cell *matHeaderCellDef> Direção Defensiva </th>
-                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 0)" class="centralize"> {{student.subjects[0]}}
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 0)" class="centralize"> {{student.subjects.defensiveDriving}}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="mat2">
                 <th mat-header-cell *matHeaderCellDef> Legislação </th>
-                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 1)" class="centralize"> {{student.subjects[1]}}
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 1)" class="centralize"> {{student.subjects.legislation}}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="mat3">
                 <th mat-header-cell *matHeaderCellDef> Mecânica </th>
-                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 2)" class="centralize"> {{student.subjects[2]}}
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 2)" class="centralize"> {{student.subjects.mechanics}}
                 </td>
 
             </ng-container>
 
             <ng-container matColumnDef="mat4">
                 <th mat-header-cell *matHeaderCellDef> Meio Ambiente </th>
-                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 3)" class="centralize"> {{student.subjects[3]}}
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 3)" class="centralize"> {{student.subjects.environment}}
 
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="mat5">
                 <th mat-header-cell *matHeaderCellDef> Primeiros Socorros </th>
-                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 4)" class="centralize"> {{student.subjects[4]}}
+                <td mat-cell *matCellDef="let student" (click)="openDialog(student, 4)" class="centralize"> {{student.subjects.firstAid}}
                 </td>
+            </ng-container>
+
+            <ng-container matColumnDef="c1">
+              <th mat-header-cell *matHeaderCellDef> Check 1 </th>
+              <td mat-cell *matCellDef="let student" class="centralize" >
+                <mat-checkbox [checked]="student.check1" (change)="this.changeCheck1(student)"></mat-checkbox>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="c2">
+              <th mat-header-cell *matHeaderCellDef> Check 2 </th>
+              <td mat-cell *matCellDef="let student" class="centralize">
+                <mat-checkbox [checked]="student.check2" (change)="this.changeCheck2(student)"></mat-checkbox>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="c3">
+              <th mat-header-cell *matHeaderCellDef> Check 3 </th>
+              <td mat-cell *matCellDef="let student"  class="centralize">
+                <mat-checkbox [checked]="student.check3" (change)="this.changeCheck3(student)"></mat-checkbox>
+              </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-
+        <mat-paginator [pageSizeOptions]="[5, 10, 20, 30]"></mat-paginator>
     </div>
+    <button mat-raised-button color="primary" (click)='onSubmit()' type="submit" class="button">Salvar</button>
+
 </div>
