--- a/src/app/dialog-box/dialog-box.component.html
+++ b/src/app/dialog-box/dialog-box.component.html
@@ -1,13 +1,36 @@
-<h1 mat-dialog-title>Atualizar aulas da matéria</h1>
-<div mat-dialog-content>
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="Atualizar aulas" matInput [(ngModel)]="local_data.obj.subjects[index]">
-  </mat-form-field>
-  <!-- <ng-template #elseTemplate>
-    Sure to delete <b>{{local_data.obj.name}}</b>?
-  </ng-template> -->
+<div *ngIf="type == 'Student'">
+    <h1 mat-dialog-title>Atualizar aulas da matéria</h1>
+    <div mat-dialog-content>
+      <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+        <input *ngIf="index == 0" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.defensiveDriving">
+        <input *ngIf="index == 1" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.legislation">
+        <input *ngIf="index == 2" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.mechanics">
+        <input *ngIf="index == 3" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.environment">
+        <input *ngIf="index == 4" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.firstAid">
+      </mat-form-field>
+      <!-- <ng-template #elseTemplate>
+        Sure to delete <b>{{local_data.obj.name}}</b>?
+      </ng-template> -->
+    </div>
+    <div mat-dialog-actions>
+      <button mat-button (click)="doAction()" mat-flat-button color="warn">Atualizar</button>
+      <button mat-button (click)="closeDialog()">Cancelar</button>
+    </div>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="doAction()" mat-flat-button color="warn">Atualizar</button>
-  <button mat-button (click)="closeDialog()">Cancelar</button>
+
+<div *ngIf="type == 'School'">
+    <h1 mat-dialog-title>Criar nova franquia</h1>
+    <div mat-dialog-content>
+      <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+        <input placeholder="Nome da franquia" matInput>
+      </mat-form-field>
+      <!-- <ng-template #elseTemplate>
+        Sure to delete <b>{{local_data.obj.name}}</b>?
+      </ng-template> -->
+    </div>
+    <div mat-dialog-actions>
+      <button mat-button (click)="doAction()" mat-flat-button color="warn">Atualizar</button>
+      <button mat-button (click)="closeDialog()">Cancelar</button>
+    </div>
 </div>
+
