--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -50,7 +50,7 @@
                     <a mat-list-item routerLink="/alunos-teoricos">
                         Tabela Teórica
                     </a>
-                    <a mat-list-item routerLink="#">
+                    <a mat-list-item routerLink="/multas">
                         Multas - Teóricas
                     </a>
                 </mat-nav-list>
@@ -61,10 +61,10 @@
                     Módulo Instrutor
                 </mat-expansion-panel-header>
                 <mat-nav-list dense>
-                    <a mat-list-item routerLink="#">
+                    <a mat-list-item routerLink="/instrutor-pratico">
                         Instrutor Prático
                     </a>
-                    <a mat-list-item routerLink="#">
+                    <a mat-list-item routerLink="/instrutor-teorico">
                         Instrutor Teórico
                     </a>
                 </mat-nav-list>
@@ -98,6 +98,7 @@
             </mat-expansion-panel>
 
         </mat-nav-list>
+
     </mat-sidenav>
     <router-outlet></router-outlet>
 
