--- a/src/app/admin-alunos/admin-alunos.component.html
+++ b/src/app/admin-alunos/admin-alunos.component.html
@@ -32,6 +32,24 @@
       <td mat-cell *matCellDef="let student" class="gray-element"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="update">
+      <th mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
+      <td mat-cell *matCellDef="let student">
+        <button mat-icon-button>
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Excluir Aluno </th>
+      <td mat-cell *matCellDef="let student">
+        <button mat-icon-button (click)="openDeleteDialog(student)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
