--- a/src/app/admin-funcionarios/admin-funcionarios.component.html
+++ b/src/app/admin-funcionarios/admin-funcionarios.component.html
@@ -1,37 +1,40 @@
-<div class="card">
-    <mat-card class='card-header'>
-        <h4>Administração de Funcionários</h4>
-    </mat-card>
-    
-    <div class="content">
-        <form [formGroup]="formEmployee" class="my-form">
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Nome</mat-label>
-                <input matInput formControlName="name" required>
-                <mat-error *ngIf="formEmployee.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-    
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>CPF</mat-label>
-                <input matInput formControlName="cpf" required>
-                <mat-error *ngIf="formEmployee.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-    
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Senha</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                    [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-            </mat-form-field>
+<h2>Administração de Funcionários</h2>
+<div fxLayout fxLayoutAlign="center center">
+  <mat-form-field fxFlex="40%">
+    <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Instrutor">
+  </mat-form-field>
+</div>
+<div class="mat-elevation-z8 data-table">
+  <table mat-table matSort class="table" [dataSource]="dataSource">
+    <ng-container matColumnDef="N°">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
+      <td mat-cell *matCellDef="let employee" class="gray-element"> {{employee.seq}} </td>
+    </ng-container>
 
-            <button mat-raised-button color="primary" (click)="onClickSubmit()" type="submit" class="button">Salvar</button>
+    <ng-container matColumnDef="username">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+      <td mat-cell *matCellDef="let employee" class="gray-element"> {{employee.username}}
+      </td>
+    </ng-container>
 
-        </form>
-    </div>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let employee" class="gray-element"> {{employee.email}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Excluir Funcionário </th>
+      <td mat-cell *matCellDef="let employee">
+        <button mat-icon-button (click)="openDeleteDialog(employee)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
 </div>
 
-<!-- <div class="form-element">
-    <button mat-raised-button color="primary" type="submit" class="button" [disabled]="disabledButton()">Salvar</button>
-</div> -->
+<button mat-raised-button color="primary" (click)="openDialog(employee)" class="button">Adicionar novo instrutor</button>
