--- a/src/app/instrutor-teorico/instrutor-teorico.component.scss
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.scss
@@ -8,3 +8,120 @@ h3 {
   margin-left: 10%;
   margin-top: 30px;
 }
+
+
+.card-header {
+  box-shadow: 2px 2px 2px rgba(0,0,0,.05);
+}
+
+.card {
+  background-color: #fff;
+  border: 0 solid #eee;
+  border-radius: 0;
+  width: 800px;
+  line-height: 1.5;
+  display: flex;
+  padding-left: 20px;
+  margin-left: 10%;
+  margin-top: 5%;
+}
+.card {
+  margin-bottom: 30px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.1), -1px 0 2px rgba(0,0,0,.05);
+}
+.card {
+  position: relative;
+  display: grid;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
+
+.content{
+  padding-top: 20px;
+  position: relative;
+}
+
+.col-lg-5 {
+  // display: flex;
+  // flex-wrap: wrap;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+// .col-float {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-right: -15px;
+//     margin-left: -15px;
+//     float: left;
+// }
+
+.mat-raised-button {
+  background-color: #FFD700;
+  color: #000;
+  margin-left: 10%;
+  margin-top: 30px;
+}
+
+h2 {
+  padding-left: 10%;
+}
+
+.mat-form-field {
+  padding-left: 10%;
+}
+
+
+.table{
+  width: 100%;
+  // margin: 15% auto;
+}
+
+.data-table {
+  width: 40%;
+  margin-left: 10%;
+}
+
+button {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.w-25 {
+  width: 25px;
+}
+
+.mat-cell{
+  font-size:14px;
+  font-family: Verdana,Sans-Serif;
+}
+
+.centralize {
+  text-align: center;
+}
+
+.gray-element{
+  color: gray;
+}
+.mat-form-field {
+  padding-left: 10%;
+}
+
+.buttons{
+  padding-left: 10%;
+}
+
+h4 {
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+h5 {
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+
