--- a/src/app/instructor-class-dialog/instructor-class-dialog.component.html
+++ b/src/app/instructor-class-dialog/instructor-class-dialog.component.html
@@ -24,8 +24,8 @@
       <mat-form-field appearance="legacy" class="col-lg-5">
         <mat-label>Tipo</mat-label>
         <mat-select formControlName="type">
-          <mat-option value="Prático">Prática</mat-option>
-          <mat-option value="Teórico">Teórica</mat-option>
+          <mat-option value="Prática">Prática</mat-option>
+          <mat-option value="Teórica">Teórica</mat-option>
         </mat-select>
         <!--        <mat-error *ngIf="formInstructor.invalid">{{getErrorMessage()}}</mat-error>-->
       </mat-form-field>
