--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -61,15 +61,13 @@
                     Instrutor
                 </mat-expansion-panel-header>
                 <mat-nav-list dense *ngFor="let instructor of this.instructors">
-<!--                    <a mat-list-item routerLink="/instrutor-pratico">-->
-<!--                        Instrutor Prático-->
-<!--                    </a>-->
-<!--                    <a mat-list-item routerLink="/instrutor-teorico">-->
-<!--                        Instrutor Teórico-->
-<!--                    </a>-->
-                      <a mat-list-item [routerLink]="['/instrutor', instructor.id]">
-                          {{instructor.name}}
-                      </a>
+<!--                      <a mat-list-item [routerLink]="['/instrutor', instructor.id]">-->
+<!--                          {{instructor.name}}-->
+<!--                      </a>-->
+                  <a mat-list-item (click)="changeRoute('/instrutor/' + instructor.id)">
+                    {{instructor.name}}
+                  </a>
+
                 </mat-nav-list>
             </mat-expansion-panel>
 
