--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,16 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+snack-bar-container.success {
+  background-color:green;
+}
+
+snack-bar-container.error {
+  background-color:#9B111E;
+}
+
+snack-bar-container.notification {
+  font-size: 18px !important;
+  color:white;
+  font-weight:bold;
+}
